Changed body to flex, added auto margin to footer so it's always on bottom. Currently working on fixing the speaker-element buttons on mobile.

--- a/styles/default.css
+++ b/styles/default.css
@@ -29,9 +29,6 @@ body {
     margin: 0;
     display: flex;
     flex-direction: column;
-    /* display: grid; Making the body a grid may cause issues down the line */
-    /* grid-template-rows: auto 1fr auto; */
-    /* overflow: hidden; With overflow hidden on the body, we don't get a scrollbar which causes formatting issues*/
 }
 
 /* Header - Nav - Logo */
@@ -80,6 +77,7 @@ footer {
     color: white;
     padding: 10px 0px;
     width: 100%;
+    margin-top: auto;
 }
 
 /* Font */
@@ -210,9 +208,8 @@ footer {
 }
 
 .box {
-    background-color: var(--yaml-yellow);
     border-radius: 15px;
-    border: 2px solid var(--binary-blue);
+    border: 2px solid var(--yaml-yellow);
     max-height: 80%;
 }
 
@@ -220,6 +217,7 @@ footer {
 /* Speaker Element */
 
 .speaker-element {
+
     align-items: center;
     height: 60%;
     justify-content: center;
@@ -236,6 +234,7 @@ footer {
 }
 
 .speaker {
+    background-color: var(--binary-blue);
     width: 70%;
     height: 100%;
     margin-left: 0;
@@ -251,7 +250,11 @@ footer {
     width: 50%;
     height: 100%;
     border-radius: 15px;
-    color: var(--binary-blue);
+    color: white;
+}
+
+.speaker-info .text-center {
+    padding: 2px;
 }
 
 .speaker-info h2 {
@@ -278,6 +281,7 @@ footer {
 @media (max-width: 576px){
     .speaker {
         flex-direction: column;
+        width: 90%;
     }
     .speaker img,.speaker-info {
         width: 100%;
@@ -297,7 +301,7 @@ footer {
     }
 
     header {
-        grid-template-columns: 1fr 3fr;
+        grid-template-columns: 0.5fr 3fr;
     }
 
     nav ul {
@@ -316,6 +320,16 @@ footer {
         display: none;
     }
 
+    .speaker-element {
+        flex-direction: column;
+    }
+
+    #speaker-left-button {
+        order: 5;
+    }
+    #speaker-right-button {
+        order: 6;
+    }
 }
 
 /* Medium screen sizes, usually a tablet or small laptop */
